--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,8 @@
 /config/master.key
 .idea
 
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
