--- a/.ebextensions/assets/01_nginx.config
+++ b/.ebextensions/assets/01_nginx.config
@@ -49,6 +49,13 @@ files:
           add_header Cache-Control public;
         }
 
+        location /public2 {
+          alias /var/app/current/public;
+          gzip_static on;
+          gzip on;
+          expires max;
+          add_header Cache-Control public;
+        }
 
       }
 
