--- a/.ebextensions/assets/01_nginx.config
+++ b/.ebextensions/assets/01_nginx.config
@@ -1,4 +1,14 @@
 files:
+  "/opt/elasticbeanstalk/hooks/appdeploy/pre/61_change_nginx.sh":
+    mode: "000755"
+    owner: root
+    group: root
+    content: |
+      #!/usr/bin/env bash
+      echo "ENV: ${SECRET_KEY_BASE}"
+
+
+files:
   "/opt/elasticbeanstalk/support/conf/webapp_healthd.conf":
     mode: "000644"
     owner: root
