--- a/.ebextensions/assets/01_nginx.config
+++ b/.ebextensions/assets/01_nginx.config
@@ -5,7 +5,7 @@ files:
     group: root
     content: |
       #!/usr/bin/env bash
-      echo "ENV: ${SECRET_KEY_BASE}"
+      echo "ENV: `env`"
 
 
 
