--- a/.ebextensions/assets/01_nginx.config
+++ b/.ebextensions/assets/01_nginx.config
@@ -1,19 +1,10 @@
 files:
-  "/opt/elasticbeanstalk/hooks/appdeploy/pre/61_change_nginx.sh":
-    mode: "000755"
-    owner: root
-    group: root
-    content: |
-      #!/usr/bin/env bash
-      echo "ENV: `env`"
-
-
-
   "/opt/elasticbeanstalk/support/conf/webapp_healthd.conf":
     mode: "000644"
     owner: root
     group: root
     content: |
+
       upstream my_app {
         server unix:///var/run/puma/my_app.sock;
       }
@@ -58,7 +49,9 @@ files:
           add_header Cache-Control public;
         }
 
-        location /public2 {
+        set $test_path '/public2'
+
+        location $test_path {
           alias /var/app/current/public;
           gzip_static on;
           gzip on;
