--- a/.ebextensions/assets/01_nginx.config
+++ b/.ebextensions/assets/01_nginx.config
@@ -49,7 +49,7 @@ files:
           add_header Cache-Control public;
         }
 
-        set $test_path '/public2'
+        set $test_path '/public2';
 
         location $test_path {
           alias /var/app/current/public;
