--- a/.ebextensions/assets/01_nginx.config
+++ b/.ebextensions/assets/01_nginx.config
@@ -49,7 +49,7 @@ files:
           add_header Cache-Control public;
         }
 
-        set $test_path 'sub { return $ENV{"LANG"}; }';
+        perl_set $test_path 'sub { return $ENV{"ENVTEST"}; }';
 
         location $test_path {
           alias /var/app/current/public;
