--- a/.ebextensions/assets/01_nginx.config
+++ b/.ebextensions/assets/01_nginx.config
@@ -49,7 +49,7 @@ files:
           add_header Cache-Control public;
         }
 
-        perl_set $test_path 'sub { return $ENV{"ENVTEST"}; }';
+        set_by_lua $test_path 'return os.getenv("ENVTEST")';
 
         location $test_path {
           alias /var/app/current/public;
