--- a/.ebextensions/assets/01_nginx.config
+++ b/.ebextensions/assets/01_nginx.config
@@ -5,8 +5,13 @@ files:
     group: root
     content: |
       #!/bin/bash
-
-      echo ENV: `env`
+      echo `date`
+      echo "${MAINTENANCE_PROVIDER}"
+      if [ "${MAINTENANCE_PROVIDER}" = all ]; then
+        echo 'match'
+      else
+        echo 'not match'
+      fi
 
 container_commands:
   set_up:
