--- a/.ebextensions/assets/01_nginx.config
+++ b/.ebextensions/assets/01_nginx.config
@@ -9,9 +9,80 @@ files:
       echo "${MAINTENANCE_PROVIDER}"
       if [ "${MAINTENANCE_PROVIDER}" = all ]; then
         echo 'match'
+        cp /etc/nginx/sites-enabled/maintenance.conf /opt/elasticbeanstalk/support/conf/webapp_healthd.conf
       else
         echo 'not match'
+        cp /etc/nginx/sites-enabled/enable.conf /opt/elasticbeanstalk/support/conf/webapp_healthd.conf
       fi
+
+  "/etc/nginx/sites-enabled/enable.conf":
+    mode: "000755"
+    owner: root
+    group: root
+    content: |
+      upstream my_app {
+        server unix:///var/run/puma/my_app.sock;
+      }
+
+      log_format healthd '$msec"$uri"'
+                      '$status"$request_time"$upstream_response_time"'
+                      '$http_x_forwarded_for';
+
+      server {
+        listen 80;
+        server_name _ localhost; # need to listen to localhost for worker tier
+
+        if ($time_iso8601 ~ "^(\d{4})-(\d{2})-(\d{2})T(\d{2})") {
+          set $year $1;
+          set $month $2;
+          set $day $3;
+          set $hour $4;
+        }
+
+        access_log  /var/log/nginx/access.log  main;
+        access_log /var/log/nginx/healthd/application.log.$year-$month-$day-$hour healthd;
+
+        location / {
+          proxy_pass http://my_app; # match the name of upstream directive which is defined above
+          proxy_set_header Host $host;
+          proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        }
+
+        location /assets {
+          alias /var/app/current/public/assets;
+          gzip_static on;
+          gzip on;
+          expires max;
+          add_header Cache-Control public;
+        }
+
+        location /public {
+          alias /var/app/current/public;
+          gzip_static on;
+          gzip on;
+          expires max;
+          add_header Cache-Control public;
+        }
+      }
+
+  "/etc/nginx/sites-enabled/maintenance.conf":
+    mode: "000755"
+    owner: root
+    group: root
+    content: |
+      upstream my_app {
+        server unix:///var/run/puma/my_app.sock;
+      }
+
+      log_format healthd '$msec"$uri"'
+                      '$status"$request_time"$upstream_response_time"'
+                      '$http_x_forwarded_for';
+
+      server {
+        listen 80;
+        server_name _ localhost; # need to listen to localhost for worker tier
+        error_page 503 /503.html;
+      }
 
 container_commands:
   set_up:
