--- a/.ebextensions/assets/01_nginx.config
+++ b/.ebextensions/assets/01_nginx.config
@@ -65,7 +65,7 @@ files:
         }
       }
 
-  "/etc/nginx/sites-enabled/maintenance.conf":
+  "/opt/elasticbeanstalk/support/conf/webapp_healthd.conf":
     mode: "000755"
     owner: root
     group: root
@@ -85,5 +85,5 @@ files:
       }
 
 container_commands:
-  set_up:
+  01_runmyshellscript:
     command: /home/ec2-user/setup.sh
