--- a/.ebextensions/assets/01_nginx.config
+++ b/.ebextensions/assets/01_nginx.config
@@ -70,18 +70,13 @@ files:
     owner: root
     group: root
     content: |
-      upstream my_app {
-        server unix:///var/run/puma/my_app.sock;
-      }
-
-      log_format healthd '$msec"$uri"'
-                      '$status"$request_time"$upstream_response_time"'
-                      '$http_x_forwarded_for';
 
       server {
         listen 80;
         server_name _ localhost; # need to listen to localhost for worker tier
-        error_page 503 /503.html;
+        location / {
+          return 503;
+        }
       }
 
 container_commands:
