--- a/.ebextensions/assets/01_nginx.config
+++ b/.ebextensions/assets/01_nginx.config
@@ -9,10 +9,10 @@ files:
       echo "${MAINTENANCE_PROVIDER}"
       if [ "${MAINTENANCE_PROVIDER}" = all ]; then
         echo 'match'
-        # cp /etc/nginx/sites-enabled/maintenance.conf /opt/elasticbeanstalk/support/conf/webapp_healthd.conf
+        cp /etc/nginx/sites-enabled/maintenance.conf /opt/elasticbeanstalk/support/conf/webapp_healthd.conf
       else
         echo 'not match'
-        # cp /etc/nginx/sites-enabled/enable.conf /opt/elasticbeanstalk/support/conf/webapp_healthd.conf
+        cp /etc/nginx/sites-enabled/enable.conf /opt/elasticbeanstalk/support/conf/webapp_healthd.conf
       fi
 
   "/etc/nginx/sites-enabled/enable.conf":
@@ -65,7 +65,7 @@ files:
         }
       }
 
-  "/opt/elasticbeanstalk/support/conf/webapp_healthd.conf":
+  "/etc/nginx/sites-enabled/maintenance.conf":
     mode: "000755"
     owner: root
     group: root
