--- a/.ebextensions/assets/01_nginx.config
+++ b/.ebextensions/assets/01_nginx.config
@@ -10,9 +10,11 @@ files:
       if [ "${MAINTENANCE_PROVIDER}" = all ]; then
         echo 'match'
         cp /etc/nginx/sites-enabled/maintenance.conf /opt/elasticbeanstalk/support/conf/webapp_healthd.conf
+        service nginx restart
       else
         echo 'not match'
         cp /etc/nginx/sites-enabled/enable.conf /opt/elasticbeanstalk/support/conf/webapp_healthd.conf
+        service nginx restart
       fi
 
   "/etc/nginx/sites-enabled/enable.conf":
